<resources>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap result</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="app_url_scheme">coomo</string>
    <string name="app_url_host">coomo.mall</string>
    <string name="app_url_pre_path">/open</string>
    <string name="app_name">CoomoHome</string>
    <string name="app_name_url">楷模家居s</string>
    <string name="app_name_host">楷模家居h</string>
    <string name="app_activity_welcome">欢迎页</string>
    <string name="app_activity_login">登录页</string>
    <string name="app_activity_register">注册页</string>
    <string name="app_activity_main">主框架</string>
    <string name="app_activity_location">定位</string>
    <string name="app_activity_scan">扫一扫</string>
    <string name="app_activity_search">搜索</string>
    <string name="app_activity_search_result">搜索结果</string>
    <string name="app_activity_category">分类</string>
    <string name="app_activity_recommend">买手精选</string>
    <string name="app_activity_promotion">活动专题</string>
    <string name="app_activity_regular">活动规则</string>
    <string name="app_activity_cart">购物车</string>
    <string name="app_activity_goods_detail">商品详情</string>
    <string name="app_activity_mine_order">我的订单</string>
    <string name="app_activity_order_make">订单确认</string>
    <string name="app_activity_order_detail">订单详情</string>
    <string name="app_activity_store">店铺</string>
    <string name="app_activity_address">地址管理</string>
    <string name="app_activity_address_edit">编辑地址</string>
    <string name="app_activity_commit">发表评价</string>
    <string name="app_activity_after_sale">售后</string>
    <string name="app_activity_mine_profile">个人资料</string>
    <string name="app_activity_qrcode">二维码</string>
    <string name="app_activity_mine_wallet">我的钱包</string>
    <string name="app_activity_webview">浏览器</string>
    <string name="app_activity_feedback">意见反馈</string>
    <string name="title_home">首页</string>
    <string name="title_category">商品</string>
    <string name="title_story">公益故事</string>
    <string name="title_surprise">活动</string>
    <string name="title_cart">购物车</string>
    <string name="title_mine">用户</string>
    <string name="word_position">定位</string>
    <string name="word_scan">扫一扫</string>
    <string name="category_recommend">买手精选</string>
    <string name="category_kitchen">乐活餐厨</string>
    <string name="category_life">品味生活</string>
    <string name="category_textile">甄选家纺</string>
    <string name="category_bathroom">稀奇淘</string>
    <string name="word_mine_name">你的名字</string>
    <string name="word_vip">超级会员</string>
    <string name="word_mine_order">我的订单</string>
    <string name="word_order_commit">发表评价</string>
    <string name="word_waiting_pay">待付款</string>
    <string name="word_wait_send">待发货</string>
    <string name="word_already_send">已发货</string>
    <string name="word_wait_commit">待评价</string>
    <string name="word_after_sale">售后</string>
    <string name="word_mine_service">我的服务</string>
    <string name="word_wallet">我的钱包</string>
    <string name="word_coupon">我的优惠券</string>
    <string name="word_integral">我的积分</string>
    <string name="word_news">我的消息</string>
    <string name="word_collect">我的收藏</string>
    <string name="word_find_store">查找门店</string>
    <string name="word_welfare">公益活动</string>
    <string name="word_gift">礼品中心</string>
    <string name="word_shipping_address">收货地址</string>
    <string name="word_customer">我的客服</string>
    <string name="word_friend">邀请好友</string>
    <string name="word_settings">设置</string>
    <string name="word_login">登录</string>
    <string name="word_register">注册</string>
    <string name="word_social_login">社交账号一键登录</string>
    <string name="word_social_register">社交账号一键注册</string>
    <string name="word_phone">手机号</string>
    <string name="word_please_input_phone">请输入手机号</string>
    <string name="word_verification_code">验证码</string>
    <string name="word_get_verification_code">获取验证码</string>
    <string name="word_please_input_verification_code">请输入验证码</string>
    <string name="word_wechat">微信</string>
    <string name="word_agree">登录/注册代表您已同意</string>
    <string name="word_service_protocol">《楷模家服务协议》</string>
    <string name="word_all_cate">全部分类</string>
    <string name="word_default_sort">默认排序</string>
    <string name="word_filter">筛选</string>
    <string name="word_price">价格：</string>
    <string name="word_chosen">已选择：</string>
    <string name="word_back">返回</string>
    <string name="word_good_share">分享</string>
    <string name="word_good_detail">商品详情</string>
    <string name="word_good_promotion">中秋钜惠</string>
    <string name="word_promotion">专题</string>
    <string name="word_regular">活动规则</string>
    <string name="word_add_to_cart">加入购物车</string>
    <string name="word_buy_now">立即购买</string>
    <string name="word_location">定位选择</string>
    <string name="currency_symbol">¥</string>
    <string name="component_add_minus">加减控件</string>
    <string name="word_attr">属性</string>
    <string name="word_count">数量</string>
    <string name="word_mine_profile">个人资料</string>
    <string name="word_qrcode">二维码</string>
    <string name="word_web">浏览器</string>
    <string name="word_hot_search">热门搜索</string>
    <string name="word_history_search">搜索历史</string>
    <string name="word_cancel">取消</string>
    <string name="word_pic">图片</string>
    <string name="word_new_good">新品</string>
    <string name="look_more">查看更多</string>
    <string name="word_good_name_Royal">Royal Brierley RB2252 76 系列玻璃酒杯</string>
    <string name="word_good_name_smeg">SMEG·电热水壶</string>
    <string name="word_hand_do">手工打磨 时代经典</string>
    <string name="word_7_control">7档控温</string>
    <string name="word_1799">179</string>
    <string name="word_2999">299</string>
    <string name="word_tag">活动标签</string>
    <string name="word_goods_name">意大利Smeg超美保温电水x</string>
    <string name="word_goods_brief">4分钟烧开一壶x</string>
    <string name="word_goods_price_now">139</string>
    <string name="story_about">公益是公共利益事业的简称。这是为人民服务的一种通俗讲法。指有关社会公众的福祉和利益。。“公益”一词至迟在1887年已经在中国出现并被使用，且被写入清光绪三十四年（1908年）12月27日颁布的《城镇乡地方自治章程》中。</string>
    <string name="word_all_select">全选</string>
    <string name="word_make_order">下单</string>
    <string name="word_delete">删除</string>
    <string name="word_send_kind">配送方式</string>
    <string name="word_coupon_word">优惠券</string>
    <string name="word_order_make">确认订单</string>
    <string name="word_should_pay">应付</string>
    <string name="word_edit">编辑</string>
    <string name="word_blank_cart">购物车是空的，快去选购吧~~</string>
    <string name="word_load_again">重新加载</string>
    <string name="word_order_code_pre">订单编号：</string>
    <string name="word_buy_again">再次购买</string>
    <string name="word_to_pay">去付款</string>
    <string name="word_sure_get_good">确认收货</string>
    <string name="word_to_commit">去评价</string>
    <string name="word_total_dues">总额：</string>
    <string name="word_to_recharge">去充值</string>
    <string name="word_should_pay_f">应付：</string>
    <string name="word_cancel_order">取消订单</string>
    <string name="word_order_make_time">下单时间</string>
    <string name="word_payment">支付方式</string>
    <string name="word_good_count">商品合计</string>
    <string name="word_freight">运费</string>
    <string name="word_custom_service_time">服务时间：</string>
    <string name="word_apply_after_sale">申请售后</string>
    <string name="word_online_custom_service">在线客服</string>
    <string name="word_to_logistics">查看物流</string>
    <string name="word_user_now">立即使用</string>
    <string name="word_daily_sign">每日签到</string>
    <string name="word_add_order_address">添加收货地址</string>
    <string name="word_province_city_block">省份、城市、县区</string>
    <string name="word_address_detail">详细地址</string>
    <string name="word_name">姓名</string>
    <string name="word_set_default_address">设为默认地址</string>
    <string name="word_save">保存</string>
    <string name="word_get_reward">得奖励</string>
    <string name="word_news_push">消息推送</string>
    <string name="word_feedback">意见反馈</string>
    <string name="word_about_us">关于我们</string>
    <string name="word_protocol">服务协议</string>
    <string name="word_logout">退出登录</string>
    <string name="word_send">发送</string>
    <string name="word_placeholder_advice">请在此写下您的意见和建议</string>
    <string name="word_modify_headimage">修改头像</string>
    <string name="word_account">账号</string>
    <string name="word_ni_cheng">昵称</string>
    <string name="word_sex">性别</string>
    <string name="word_chose_pic_from">请选择图片来源</string>
    <string name="word_camera">拍照</string>
    <string name="word_gallery">相册</string>
    <string name="word_please_check_network">请检查您的网络连接</string>
    <string name="word_please_login_first">请先登录</string>
</resources>