<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/bg_color_white">

        <TextView
            android:id="@+id/web_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:gravity="center"
            android:text="@string/word_register"
            android:textColor="@color/titleBlack"
            android:textSize="@dimen/title_bar_title_size" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/word_back"
            android:onClick="onClick"
            android:paddingStart="16dp"
            android:src="@drawable/icon_return" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingEnd="16dp"
            android:text="@string/word_login"
            android:textColor="@color/titleBlack"
            android:textSize="@dimen/title_bar_subtitle_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/word_phone"
            android:textColor="@color/titleGrey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="phone"
            android:maxLength="11"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/word_please_input_phone"
            android:textColorHint="@color/login_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/titleGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_verificationcode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/word_verification_code"
            android:textColor="@color/titleGrey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/verification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:maxLength="6"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/word_please_input_verification_code"
            android:textColorHint="@color/login_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/get_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="5dp"
            android:background="@drawable/bg_text_rectangle_border_primary_3"
            android:text="@string/word_get_verification_code"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/titleGray" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_color_primary_radius"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/word_register"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="38dp"
            android:layout_height="1px"
            android:background="@color/titleGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/word_social_register"
            android:textColor="@color/login_social"
            android:textSize="12sp" />

        <TextView
            android:layout_width="38dp"
            android:layout_height="1px"
            android:background="@color/titleGray" />
    </LinearLayout>

    <ImageView
        android:id="@+id/wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_wechat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/word_wechat"
        android:textColor="@color/titleBlack"
        android:textSize="10sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_agree"
            android:textColor="@color/login_social"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/word_service_protocol"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>