<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@drawable/bg_color_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_activity_feedback"
            android:textColor="@color/titleBlack"
            android:textSize="@dimen/title_bar_title_size" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/word_back"
            android:onClick="onClick"
            android:paddingStart="16dp"
            android:src="@drawable/icon_return" />

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingEnd="16dp"
            android:text="@string/word_send"
            android:textColor="@color/titleBlack"
            android:textSize="@dimen/title_bar_subtitle_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/titleGray" />
    </RelativeLayout>


    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_color_white_radius"
        android:gravity="start"
        android:maxLength="2000"
        android:hint="@string/word_placeholder_advice"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:padding="10dp"
        android:textSize="12sp" />
</LinearLayout>