<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@drawable/bg_color_white_radius">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_marginBottom="15dp"
        android:textSize="17sp"
        android:text="@string/word_chose_pic_from"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:orientation="vertical"
        android:background="@color/titleGray">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/txtCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:visibility="gone"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/icon_shoppingcart"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/word_camera"
            android:textSize="17sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:orientation="vertical"
        android:background="@color/titleGray">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/txtPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:visibility="gone"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/icon_shoppingcart"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/word_gallery"
            android:textSize="17sp"/>

    </LinearLayout>

</LinearLayout>
