<?xml version="1.0" encoding="utf-8"?><!--分类导航-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="94dp"
    android:background="@color/white"
    android:gravity="center|top"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:weightSum="5">

    <LinearLayout
        android:id="@+id/category_recommend"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/translate"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sample"
            android:scaleType="fitXY"
            android:src="@drawable/home_selection_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_color_white"
            android:gravity="center"
            android:text="@string/category_recommend"
            android:textColor="@color/home_cate_name"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/category_kitchen"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/home_kitchen_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_color_white"
            android:gravity="center"
            android:text="@string/category_kitchen"
            android:textColor="@color/home_cate_name"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_life"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/home_life_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_color_white"
            android:gravity="center"
            android:text="@string/category_life"
            android:textColor="@color/home_cate_name"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_textile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/home_textiles_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_color_white"
            android:gravity="center"
            android:text="@string/category_textile"
            android:textColor="@color/home_cate_name"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_bathroom"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/home_xiqitao" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_color_white"
            android:gravity="center"
            android:text="@string/category_bathroom"
            android:textColor="@color/home_cate_name"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>